# api/controllers/types.gen.go
@@ -1,123 +1,0 @@
-// Package controllers provides primitives to interact the openapi HTTP API.
-//
-// Code generated by github.com/deepmap/oapi-codegen DO NOT EDIT.
-package controllers
-
-import (
-	"time"
-)
-
-// Account defines model for Account.
-type Account string
-
-// AccountState defines model for AccountState.
-type AccountState struct {
-	Account    *Account    `json:"account,omitempty"`
-	ApplyState *ApplyState `json:"apply_state,omitempty"`
-	Id         *StateID    `json:"id,omitempty"`
-	Label      *Label      `json:"label,omitempty"`
-	OrgId      *OrgID      `json:"org_id,omitempty"`
-	State      *State      `json:"state,omitempty"`
-}
-
-// ApplyState defines model for ApplyState.
-type ApplyState bool
-
-// Initiator defines model for Initiator.
-type Initiator string
-
-// Label defines model for Label.
-type Label string
-
-// OrgID defines model for OrgID.
-type OrgID string
-
-// State defines model for State.
-type State struct {
-	ComplianceOpenscap string `json:"compliance_openscap"`
-	Insights           string `json:"insights"`
-	Remediations       string `json:"remediations"`
-}
-
-// StateArchive defines model for StateArchive.
-type StateArchive struct {
-	Account   *Account   `json:"account,omitempty"`
-	CreatedAt *Timestamp `json:"created_at,omitempty"`
-	Id        *StateID   `json:"id,omitempty"`
-	Initiator *Initiator `json:"initiator,omitempty"`
-	Label     *Label     `json:"label,omitempty"`
-	State     *State     `json:"state,omitempty"`
-}
-
-// StateArchives defines model for StateArchives.
-type StateArchives struct {
-
-	// A number of entries returned from offset
-	Count *int `json:"count,omitempty"`
-
-	// A max number of entries to return
-	Limit *int `json:"limit,omitempty"`
-
-	// A number representing he starting point for retrieving entries
-	Offset *int `json:"offset,omitempty"`
-
-	// Query results
-	Results *[]StateArchive `json:"results,omitempty"`
-
-	// A total count of found entries
-	Total *int `json:"total,omitempty"`
-}
-
-// StateID defines model for StateID.
-type StateID string
-
-// Timestamp defines model for Timestamp.
-type Timestamp time.Time
-
-// Limit defines model for Limit.
-type Limit int
-
-// Offset defines model for Offset.
-type Offset int
-
-// SortBy defines model for SortBy.
-type SortBy string
-
-// List of SortBy
-const (
-	SortBy_created_at      SortBy = "created_at"
-	SortBy_created_at_asc  SortBy = "created_at:asc"
-	SortBy_created_at_desc SortBy = "created_at:desc"
-)
-
-// StateIDParam defines model for StateIDParam.
-type StateIDParam StateID
-
-// PostManageJSONBody defines parameters for PostManage.
-type PostManageJSONBody bool
-
-// GetStatesParams defines parameters for GetStates.
-type GetStatesParams struct {
-
-	// Maximum number of results to return
-	Limit *Limit `json:"limit,omitempty"`
-
-	// Indicates the starting position of the query relative to the complete set of items that match the query
-	Offset *Offset `json:"offset,omitempty"`
-	SortBy *SortBy `json:"sort_by,omitempty"`
-}
-
-// UpdateStatesJSONBody defines parameters for UpdateStates.
-type UpdateStatesJSONBody State
-
-// GetPlaybookPreviewJSONBody defines parameters for GetPlaybookPreview.
-type GetPlaybookPreviewJSONBody State
-
-// PostManageJSONRequestBody defines body for PostManage for application/json ContentType.
-type PostManageJSONRequestBody PostManageJSONBody
-
-// UpdateStatesJSONRequestBody defines body for UpdateStates for application/json ContentType.
-type UpdateStatesJSONRequestBody UpdateStatesJSONBody
-
-// GetPlaybookPreviewJSONRequestBody defines body for GetPlaybookPreview for application/json ContentType.
-type GetPlaybookPreviewJSONRequestBody GetPlaybookPreviewJSONBody
